
31. Oct. 2001
- a TOS in RAM loaded using gemdos boot.prg (LVL)
- some memory fixes, got rid of end.o (LVL)
- a TOS in RAM loaded using an autoboot floppy (LVL)

01. Nov. 2001
- removed old stuff from bios.c and startup.s (LVL)
- fixed the BDOS-buffer-init bug: EmuTOS boots a real MegaSTE2!!! (LVL)
- Removed hardcoded default drive #defines
- added EmuCON (EmuTOS console, before command.prg) to EmuTOS      (MAD)
  This is not yet working (it seems command.c is not ROMable for now) 

02. Nov. 2001
- EmuCON is now working. (THO)
- Implemented cursconf (XBIOS 0x15)  (MAD)
- Removed F_IOCtl() and the MOUSE:, CLOCK: and NUL: devices.          (THO)
- Mapped the CON:, AUX: and PRN: devices to Atari values (-1, -2, -3) (THO)
- commented out XBIOS calls from command.c (for testing)

03. Nov. 2001
- run AUTO folder prgs, run EmuCON using Pexec(5) (LVL)
- localconf.h taken in consideration (LVL)
- implemented processor check and set of _longframe in BIOS/BDOS (MAD)
- IKBD and MegaRTC clock (setting time & date untested) (LVL)

04. Nov. 2001
- added old VDI sources from DRI (not running yet)

05. Nov. 2001.
- added forgotten bios/processor.h

06. Nov. 2001
- US kbd default, optional DE and FR kbds, tools to add more KBD defs (LVL)
- changed joystick support in aciavecs.S (untested) (LVL)
- Makefile (updated clean and distclean, BUILDDATE also for CYGWIN) (LVL)
- Reimplemented bios/memory.S in a more readable kind   (MAD)

07. Nov. 2001
- Reimplemented bios/memory.S - is hopefully perfect now   (MAD)

08. Nov. 2001
- Added several ikbd-functions as base for mouse driver    (MAD)
- changed ikbdws (now 2. arg is UBYTE *ptr instead of LONG) (MAD)

11. Nov. 2001
- Put portab.h to include/ for bdos AND bios   (MAD)
- ripped out kprint() (it has been replaced by kprintf()  (MAD)

13. Nov. 2001
- Native Language support tools, french translation (LVL)
- asm glue for kprintf in startup.S (LVL)

15. Nov. 2001 
- Native Language support, german translation (MAD)