@@ -4,5 +4,5 @@
 # (one two-letter lowercase language name per line)
 #
 
-fr
+#fr
 de
