@@ -10,7 +10,6 @@
 - implement mediach, and flopvbl (to deselect the drive when idle)
 - allow international printed messages
 - handle international keyboards
-- test processor check with processor >68000
 - the ROM EmuCON does not lauch commands when booting on a floppy 
   (the autoexec'd command.prg still does)
 - bconin needs to have different keyboard mappings
